@@ -18,7 +18,8 @@ test_expect_success "munin-limits" '
 '
 
 test_expect_success "munin-html: no files in /var/cache/munin/www/ before first run" '
-  [ -z "$(find /var/cache/munin/www/ -mindepth 1)" ]
+  find /var/cache/munin/www/ -mindepth 1 >unwanted_existing_files
+  test_must_be_empty unwanted_existing_files
 '
 
 test_expect_success "munin-html: running" '
@@ -31,7 +32,8 @@ test_expect_success "munin-html: generated files in /var/cache/munin/www/static/
 
 if [ "$MUNIN_TEST_CGI_ENABLED" = "1" ]; then
   test_expect_success "CGI strategy: do not generate static HTML files" '
-    [ -z "$(find /var/cache/munin/www/ -mindepth 1 | grep -vE "/static(/|$)")" ]
+    find /var/cache/munin/www/ -mindepth 1 | grep -vE "/static(/|$)" >unwanted_existing_files
+    test_must_be_empty unwanted_existing_files
   '
 else
   test_expect_success "cron strategy: generate static HTML files" '
@@ -45,7 +47,8 @@ test_expect_success "munin-graph" '
 
 if [ "$MUNIN_TEST_CGI_ENABLED" = "1" ]; then
   test_expect_success "CGI strategy: do not generate static graph files" '
-    [ -z "$(find /var/cache/munin/www/ -type f -name "*.png" | grep -v "/static/")" ]
+    find /var/cache/munin/www/ -type f -name "*.png" | grep -v "/static/" >unwanted_existing_files
+    test_must_be_empty unwanted_existing_files
   '
 else
   test_expect_success "cron strategy: generate static graph files" '
